k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smile-identity-kyc-fe
spec:
  selector:
    app: smile-identity-kyc
  ports:
    - port: 80
      targetPort: 80
